observability/resources/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
  annotations:
    gethomepage.dev/description: Grafana monitoring
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/name: Grafana
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - grafana.home.jef.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
          group: ''
          kind: Service
          weight: 1
