observability/resources/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
  annotations:
    gethomepage.dev/description: Prometheus
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: sh-prometheus.svg
    gethomepage.dev/name: Prometheus
    gethomepage.dev/widget.type: "prometheusmetric"
    gethomepage.dev/widget.metrics.0.label: "Active alerts"
    gethomepage.dev/widget.metrics.0.query: alertmanager_alerts{state="active"}-1
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - prometheus.jef.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
          group: ''
          kind: Service
          weight: 1
